# Production_style_Agentic_RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirementx.txt
.github/workflows/: deploy.yml
api/: app.py
app/: rag_pipeline.py  schemas.py
app/evaluation/: retrieval_eval.py
app/ingestion/: document_loader.py
app/retrieval/: chunker.py  embedder.py  indexer.py  retriever.py  vector_store.py
apps/: streamlit_app.py
noneDocsDebug/: abc.md
scripts/: crawl_docs.sh  inspect_db.py  prepare_db.py  run_streamlit.sh  solve_package_unfound.py
src/enterprise_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_project/: main.py
src/rag_project/config/: logging_config.py
src/rag_project/ingestion/: chunker.py  document_loader.py  embedder.py  indexer.py  vector_store.py
src/rag_project/llm/: llm_client.py
src/rag_project/rag/: pipeline.py  prompt_builder.py
src/rag_project/retrieval/: retriever.py
src/rag_project/schemas/: __init__.py  answer.py  chunk.py  query.py  retrieved_chunk.py
tests/: test_embedder.py
